# diversity

./: .env.example  .gitignore  PROPOSAL.md  README.md  pyproject.toml
docs/: communication_incentives_proposal.docx  communication_incentives_proposal.tex
hypercube_divergence/: __init__.py  core.py  experiments.py  game.py  strategies.py
peak_divergence/: __init__.py  core.py  experiments.py  game.py  llm_agent.py  publication_game.py  strategies.py
scripts/: build_revised_proposal_docx.py  plot_10d_views.py  plot_results.py  plot_terrain_slice.py  run_experiment.py  run_feedback_communication_case.py  run_lambda_sweep.py  run_publication_case.py  run_sweep.py  visualize_iterations.py
tests/: __init__.py  test_game.py  test_peak_game.py
